--- a/webstyle.css
+++ b/webstyle.css
@@ -23,42 +23,51 @@ body {
     font-weight: bold;
 }
 
-.navlist li {
+.navlist li:not(last-child) a{
     cursor: pointer;
-    color: 	#0e1111;
+    color: 	#353839;
     margin-right: 45px;  
 }
 
-.navlist li:hover{
-    color: #414a4c;
+.navlist li:not(last-child) a:hover{
+
+    color: #0796D8;
+    text-decoration: underline;
+    text-underline-offset: 7px;
 }
 
-.navlist :last-child {
+.navlist li:last-child a{
     margin-right: 75px;
     align-content: center;
     padding: 10px 25px 10px 25px;
     top: 0;
-    color: #f5f5f5;
+    color: #e4e9ec;
     border-radius: 10px;
     background-color: #006EA0;
 }
 
-.navlist :last-child:hover{
+.navlist li:last-child a:hover{
     color: #f5f5f5;
     background-color: #0796D8;
+    text-decoration: none;
 }
-
+ 
 .logo {
-    color: 	#0e1111;
+    color: 	#353839;
     cursor: pointer;
     margin-left: 30px;
     font-family: "Yellowtail", cursive;
+    
+}
+
+a {
+    text-decoration: none;
 }
 
 .logo:hover{
-    color: #414a4c;
+    color: #829397;
 }
-.home {
+#home {
     display: flex;
     position: relative;
     padding-top: 80px;
@@ -75,7 +84,7 @@ body {
 
 .home-text h1, h3{
     font-family: "Bebas Neue", sans-serif;
-    color: #0e1111;
+    color: #353839;
 }
 
 .home-text h1{
@@ -119,7 +128,52 @@ body {
     object-fit: fill;
 }
 
+.overview {
+    display: flex;
+    color: #353839;
+}
 
+.overview div{
+    width: 50%;
+    margin: 0px 75px;
+}
+
+.overview h1{
+    text-align: center;
+}
+
+.overview li{
+    list-style-type: none;
+    font-weight: bold;
+    padding: 5px 15px 5px 15px;
+    margin: 10px 10px 10px 10px;
+    background-color: #f5f5f5;
+    display: inline-block;
+    border-radius: 10px;
+    color: #353839;
+}
+
+.overview h4{
+    color: 	#353839;
+    font-weight: 400;
+    align-self: center;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+footer {
+    width: 100%; 
+    background-color: #006EA0;
+    float: left; 
+    margin: 0; 
+}
+
+#overview-title {
+    font-size: 40px;
+    margin-top: -40px;
+    text-align: center;
+    color: #353839;
+}
 
 
 
