--- a/webstyle.css
+++ b/webstyle.css
@@ -23,17 +23,26 @@ body {
     font-weight: bold;
 }
 
-.navlist li:not(last-child) a{
+.navlist li a{
     cursor: pointer;
     color: 	#353839;
     margin-right: 45px;  
 }
 
-.navlist li:not(last-child) a:hover{
+.navlist li{
+    transition: 0.3s;
+}
 
+.navlist li:hover{
+    scale: 1.1;
+    transition: 0.3s;
+}
+
+.navlist li a:hover{
     color: #0796D8;
     text-decoration: underline;
     text-underline-offset: 7px;
+    transition: 0.2s;
 }
 
 .navlist li:last-child a{
@@ -47,9 +56,17 @@ body {
 }
 
 .navlist li:last-child a:hover{
+    scale: 1.1;
     color: #f5f5f5;
     background-color: #0796D8;
     text-decoration: none;
+    transition: 0.2s;
+}
+
+.navlist.active>a:link, .navlist.active>a:visited {
+    color: #0796D8;
+    text-decoration: underline;
+    text-underline-offset: 7px;
 }
  
 .logo {
@@ -57,6 +74,7 @@ body {
     cursor: pointer;
     margin-left: 30px;
     font-family: "Yellowtail", cursive;
+    transition: 0.3s;
     
 }
 
@@ -65,13 +83,15 @@ a {
 }
 
 .logo:hover{
+    scale: 1.1;
+    transition: 0.3s;
     color: #829397;
 }
 #home {
     display: flex;
     position: relative;
     padding-top: 80px;
-    height: 100vh; /* Set the height to 100% of the viewport height */
+    height: 100vh; 
     justify-content: space-between; 
 }
 
@@ -108,6 +128,11 @@ a {
 
 .home-text button:hover{
     background-color: #0796D8;
+    transition: 0.3s;
+}
+
+.home-text a{
+    color: #e4e9ec;
 }
 
 .home-text h2, h4{
@@ -135,7 +160,8 @@ a {
 
 .overview div{
     width: 50%;
-    margin: 0px 75px;
+    margin: 50px 75px;
+    padding-bottom: 75px;
 }
 
 .overview h1{
@@ -163,17 +189,72 @@ a {
 
 footer {
     width: 100%; 
-    background-color: #006EA0;
+    background-color: #f5f5f5;
     float: left; 
     margin: 0; 
+    display: flex;
+    line-height: 0.5em;
 }
 
+.footer div:first-child{
+    justify-content: left;
+    padding-left: 30px;
+}
+
+.footer div:not(first-child){
+    padding-left: 20%;
+}
+.footer h4{
+    color: #353839;
+    display: block;
+    list-style: none;
+    margin-left: -18px;
+    font-size: 12px;
+    line-height: 0.5em;
+}
+
+.footer h1 a{
+    font-family: "Yellowtail", cursive;
+    color: #353839;
+}
+
+.footer h1 a:hover{
+    transition: 0.3s;
+    color: #829397;
+}
 #overview-title {
     font-size: 40px;
     margin-top: -40px;
     text-align: center;
     color: #353839;
 }
+
+.about {
+    display: flex;
+    padding-top: 100px;
+    height: 100vh;
+    width: auto;
+    justify-content: space-evenly;
+}
+
+.about span{
+    justify-content: center;
+    padding: 0px 125px 0px 125px;
+}
+
+.about h1 {
+    color: #353839;
+    font-size: 60px;
+    text-align: left; 
+    font-size: 50px;
+}
+
+.about img{
+    height: 75vh;
+    width: auto;
+    padding-top: 50px;
+}
+
 
 
 
