--- a/webstyle.css
+++ b/webstyle.css
@@ -119,7 +119,7 @@ a {
     font-size: 70px;
 }
 
-.home-text button{
+button{
     cursor: pointer;
     font-family: "Bebas Neue", sans-serif;
     border: none;
@@ -132,13 +132,13 @@ a {
     font-size: 20px;
 }
 
-.home-text button:hover{
+button:hover{
     background-color: #0796D8;
     transition: 0.3s;
 }
 
-.home-text a{
-    color: #e4e9ec;
+button a{
+    color: #e4e9ec;;
 }
 
 .home-text h2, h4{
@@ -275,10 +275,10 @@ footer {
     text-align: left; 
 }
 
-.Post-Info {
+.Post-Info h4{
     color: #353839;
     padding: 10px 10px 100px 10px;
-    margin: 0px 0px 0px 75px;
+    margin: 10px 0px 0px 65px;
 }
 
 .Post-Office{
@@ -288,21 +288,10 @@ footer {
     margin: 0px 0px 0px 75px;
 }
 
-.Portfolio{
-    display: flex;
-}
-
-.Portfolio img{
-    clip-path: polygon(0 0, 35% 0, 100% 100%, 0% 100%);
-    object-fit:fill;
-    width: 80%;
-    height: 50%;
-}
-
 #welcome {
     display: flex;
     position: relative;
-    padding-top: 90px;
+    padding-top: 80px;
     height: 100vh; 
     justify-content: space-between; 
     transform: scaleX(-1);
@@ -310,25 +299,23 @@ footer {
 
 #welcome .home-text{
     font-family: "Bebas Neue", sans-serif;
+    margin-bottom: 70px;
     transform: scaleX(-1);
-    text-align: left;
+    text-align: center;
 }
 
 #welcome .home-text h2{
     color: #353839;
-    text-indent: -1em;
     line-height: 20px;
     font-size: 60px;
 }
 #welcome .home-text h1{
     color: #0796D8;
-    text-indent: 2em;
     font-size: 100px;
 }
 
 #welcome .home-text h4{
     color: #353839;
-    text-indent: 4em;
     line-height: 15px;
     font-size: 30px;
 }
@@ -372,6 +359,139 @@ footer {
     width: auto;
     padding-top: 0px;
 }
+
+.all-projects{
+    display: flex;
+    margin: 50px 75px;
+    padding: 100px 0px 100px 0px;
+}
+
+.all-projects div{
+    width: 50%;
+}
+
+.all-projects h2{
+    padding: 30px;
+    font-size: 2em;
+}
+
+hr {
+    border-bottom: 4px solid #006EA0;
+}
+
+#projects-title {
+    font-size: 3em;
+    line-height: 0em;
+    margin: 50px 75px;
+}
+.all-projects ul li{
+    list-style: none;
+    font-size: 1.25em;
+    line-height: 4em;
+    text-indent: 0;
+}
+
+.single-container {
+    text-align: center;
+    justify-content: center;
+    margin-top: 20vh;
+    color: #353839;
+    line-height: 1em;
+}
+
+.single-container h1{
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 4em;
+}
+
+.single-container div{
+    margin: 10vh 20vh;
+    text-align: left;
+}
+
+.single-container h3{
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 1em;
+    letter-spacing: 0.5mm;
+    color: #829397;
+}
+
+.single-container li{
+    list-style-type: none;
+    font-weight: bold;
+    padding: 10px 15px 10px 15px;
+    background-color: #f5f5f5;
+    display: inline-block;
+    margin: 20px 20px 20px 0px;
+    border-radius: 10px;
+    color: #353839;
+}
+
+#project-image img{
+    display: block;
+    object-fit: contain;
+    margin: 10vh auto;
+    height: fit-content;
+    width: auto;
+    max-height: 60vh;
+}
+
+.contact {
+    display: flex;
+    justify-content: space-between;
+    padding: 90px 200px 0px 200px;
+    margin: 40px 0;
+}
+  
+.contact h1 {
+    font-size: 3em;
+    color: #333;
+    margin-bottom: 0px;
+}
+
+.contact h3{
+    color: #829397;
+}
+
+  
+.contact ul {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.contact li {
+    margin-right: 20px;
+}
+  
+.contact div img{
+    height: 70vh;
+    width: auto;
+}
+.contact ul li img {
+    clip-path: circle(30px);
+    filter: invert(19%) sepia(69%) saturate(5645%) hue-rotate(185deg) brightness(94%) contrast(101%);
+    width: 60px;
+    height: 60px;
+}
+  
+.contact p {
+    font-size: 18px;
+    color: #333;
+}
+  
+.contact a {
+    color: #006EA0;
+    text-decoration: none;
+    font-weight: bold;
+}
+  
+.contact a:hover {
+    text-decoration: underline;
+}
+
+
 
 
 
